@startuml

title __TEMPLATE's Class Diagram__\n

  namespace model.data {
    namespace source {
      namespace template {
        class model.data.source.template.Alias {
            + language : String
            {static} + serialVersionUID : long
            + value : String
            + toString()
        }
      }
    }
  }
  

  namespace model.data {
    namespace source {
      namespace template {
        class model.data.source.template.Claim {
            + id : String
            + qualifiers : Map<String, List<Qualifier>>
            + rank : String
            + references : List<Reference>
            {static} + serialVersionUID : long
            + type : String
            + toString()
        }
      }
    }
  }
  

  namespace model.data {
    namespace source {
      namespace template {
        class model.data.source.template.DataValue {
            {static} + serialVersionUID : long
            + type : String
            + value : Object
            + toString()
        }
      }
    }
  }
  

  namespace model.data {
    namespace source {
      namespace template {
        class model.data.source.template.Description {
            + language : String
            {static} + serialVersionUID : long
            + value : String
            + toString()
        }
      }
    }
  }
  

  namespace model.data {
    namespace source {
      namespace template {
        class model.data.source.template.Entities {
            + entities : Map<String, Entity>
            {static} + serialVersionUID : long
            + toString()
        }
      }
    }
  }
  

  namespace model.data {
    namespace source {
      namespace template {
        class model.data.source.template.Entity {
            + aliases : Map<String, List<Alias>>
            + claims : Map<String, List<Claim>>
            + descriptions : Map<String, Description>
            + id : String
            + labels : Map<String, Label>
            + lastrevid : int
            + modified : String
            + representations : Map<String, Label>
            {static} + serialVersionUID : long
            + sitelinks : Map<String, SiteLink>
            + type : String
            + toString()
        }
      }
    }
  }
  

  namespace model.data {
    namespace source {
      namespace template {
        class model.data.source.template.Label {
            + language : String
            {static} + serialVersionUID : long
            + value : String
            + toString()
        }
      }
    }
  }
  

  namespace model.data {
    namespace source {
      namespace template {
        class model.data.source.template.Qualifier {
            + datatype : String
            + hash : String
            + property : String
            {static} + serialVersionUID : long
            + snaktype : String
            + toString()
        }
      }
    }
  }
  

  namespace model.data {
    namespace source {
      namespace template {
        class model.data.source.template.Reference {
            + hash : String
            {static} + serialVersionUID : long
            + snaks : Map<String, List<Snak>>
            + snaksOrder : List<String>
            + toString()
        }
      }
    }
  }
  

  namespace model.data {
    namespace source {
      namespace template {
        class model.data.source.template.SiteLink {
            + badges : List<String>
            {static} + serialVersionUID : long
            + site : String
            + title : String
            + url : String
            + toString()
        }
      }
    }
  }
  

  namespace model.data {
    namespace source {
      namespace template {
        class model.data.source.template.Snak {
            + datatype : String
            + property : String
            {static} + serialVersionUID : long
            + snaktype : String
            + toString()
        }
      }
    }
  }
  

  model.data.source.template.Alias .up.|> java.io.Serializable
  model.data.source.template.Claim .up.|> java.io.Serializable
  model.data.source.template.Claim o-- model.data.source.template.Snak : mainsnak
  model.data.source.template.DataValue .up.|> java.io.Serializable
  model.data.source.template.Description .up.|> java.io.Serializable
  model.data.source.template.Entities .up.|> java.io.Serializable
  model.data.source.template.Entity .up.|> java.io.Serializable
  model.data.source.template.Label .up.|> java.io.Serializable
  model.data.source.template.Qualifier .up.|> java.io.Serializable
  model.data.source.template.Qualifier o-- model.data.source.template.DataValue : datavalue
  model.data.source.template.Reference .up.|> java.io.Serializable
  model.data.source.template.SiteLink .up.|> java.io.Serializable
  model.data.source.template.Snak .up.|> java.io.Serializable
  model.data.source.template.Snak o-- model.data.source.template.DataValue : datavalue


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
